# gemini-language-proficiency-estimator

./: .gitattributes  README.md  app.py  credentials.py  main.py  pyproject.toml
.git-crypt/keys/default/0/: A64640922E61815109DD3E30E9F6733C1AF84D86.gpg
adapters/: bigquery_adapter.py  firestore_adapter.py  gemini_adapter.py  openai_adapter.py  openrouter_adapter.py
utils/: cloud_storage.py
